<resources>

    <!-- APPLICATION -->
    <string name="app_name">WSWMe</string>


    <!-- Error messages -->
    <string name="error_google_play_version">To run this application You need to update GooglePlay Services!</string>
    <string name="error_no_internet">To use this application you need to turn on internet connection!</string>

    <string name="ERROR_INVALID_CUSTOM_TOKEN">The custom token format is incorrect. Please check the documentation.</string>
    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">The custom token corresponds to a different audience.</string>
    <string name="ERROR_INVALID_CREDENTIAL">The supplied auth credential is malformed or has expired.</string>
    <string name="ERROR_INVALID_EMAIL">The email address is badly formatted.</string>
    <string name="ERROR_WRONG_PASSWORD">The password is invalid or the user does not have a password.</string>
    <string name="ERROR_USER_MISMATCH">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="ERROR_REQUIRES_RECENT_LOGIN">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">This credential is already associated with a different user account.</string>
    <string name="ERROR_USER_DISABLED">The user account has been disabled by an administrator.</string>
    <string name="USER_DISABLED">@string/ERROR_USER_DISABLED</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="ERROR_USER_NOT_FOUND">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="USER_NOT_FOUND">@string/ERROR_USER_NOT_FOUND</string>
    <string name="ERROR_INVALID_USER_TOKEN">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">This operation is not allowed. You must enable this service in the console.</string>
    <string name="ERROR_WEAK_PASSWORD">The given password is invalid.</string>
    <string name="ERROR_VK_ACCESS_DENIED_BY_USER">Вы не разрешили доступ к профилю!</string>
    <string name="ERROR_UNKNOWN_ERROR">Неизвестная ошибка!</string>


    <!-- auth_choose -->
    <string name="splash_text_welcome">Добро пожаловать. Войдите с помощью одной из соцсетей или через e-mail:</string>
    <string name="btn_text_choose_login_vk">Войти через ВКонтакте</string>
    <string name="btn_text_choose_login_fb">Войти через FaceBook</string>
    <string name="btn_text_choose_login_email">Войти через Email</string>
    <string name="btn_text_reg_email">Я новый пользователь</string>


    <!-- reg_email -->
    <string name="btn_text_registration_email">Регистрация</string>
    <string name="checkbox_registration_confirm_rights">Я согласен с правилами</string>
    <string name="terms_is_not_accepted">Нужно согласиться с правилами!</string>
    <string name="user_registered">Вы зарегистрированны!</string>

    <!-- auth_email -->
    <string name="auth_email_actionbar_text">Вход через e-mail</string>
    <string name="auth_email_btn_text_login_email">Войти</string>
    <string name="auth_email_btn_text_new_user">Я новый пользователь</string>
    <string name="auth_email_btn_text_login_email_send_password">Забыли?</string>

    <!-- auth/reg form -->
    <string name="reg_email_actionbar_text">Регистрация</string>
    <string name="reg_email_welcome_text">Заполните данные, чтобы создать новый аккаунт:</string>
    <string name="text_login_email">Email</string>
    <string name="text_login_input_email_placeholder">Email</string>
    <string name="text_login_password">Пароль</string>
    <string name="text_login_password2">Повторите пароль</string>
    <string name="text_login_input_password_placeholder">Пароль</string>
    <string name="wrong_email">Введите правильный Email!</string>
    <string name="wrong_password">Пароль должен быть длиннее 6 символов!</string>
    <string name="passwords_not_equal">Пароли должны совпадать!</string>

    <!-- splash_screen -->
    <string name="text_splash_screen_loading">Загружаемся…</string>

    <!-- some other not unique strings -->
    <string name="btn_text_ok">OK</string>
    <string name="failed_firebase">Something wrong with Firebase!</string>


    <!-- Friends list -->
    <string name="friendslist_loading">Загружаем друзей 👥</string>
    <string name="friends_list_menu_bottom_firends">Друзья</string>
    <string name="friends_list_menu_bottom_connections">Совпадения</string>
    <string name="friends_list_menu_bottom_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
