<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button_login_vk"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#597da3"
        android:onClick="onBtnClickFBType"
        android:text="@string/btn_text_choose_login_vk"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_login_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login_fb"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#3b5998"
        android:onClick="onBtnClickVKType"
        android:text="@string/btn_text_choose_login_fb"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login_email"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#039be5"
        android:onClick="onBtnClickEmailType"
        android:text="@string/btn_text_choose_login_email"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SplashWelcomeText"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/splash_text_welcome"
        android:textColor="#4a4a4a"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login_vk"
        app:layout_constraintStart_toStartOf="@+id/button_login_vk" />

    <TextView
        android:id="@+id/SplashAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/app_name"
        android:textColor="#039be5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SplashWelcomeText"
        app:layout_constraintStart_toStartOf="@+id/SplashWelcomeText" />

</android.support.constraint.ConstraintLayout>